[gd_scene load_steps=19 format=3 uid="uid://dxeregxb5my7c"]

[ext_resource type="Script" uid="uid://0hk4xulkyr36" path="res://Scenes/TrainingProgram/parts/GameplayLoop/parts/EngineeringPanel/engineering_panel.gd" id="1_ymcgu"]
[ext_resource type="FontFile" uid="uid://dlia1t71max12" path="res://Fonts/PixelOperator.ttf" id="2_nely8"]
[ext_resource type="FontFile" uid="uid://cf1pm48y6jlcm" path="res://Fonts/RasterForgeRegular-JpBgm.ttf" id="3_jdo1u"]
[ext_resource type="PackedScene" uid="uid://cea6twjuqri8r" path="res://Scenes/TrainingProgram/parts/GameplayLoop/parts/EngineeringPanel/parts/EngineeringSection.tscn" id="4_1m6fd"]
[ext_resource type="PackedScene" uid="uid://y15q2qyj1364" path="res://Scenes/TrainingProgram/parts/GameplayLoop/parts/EngineeringPanel/parts/TempMonitor.tscn" id="5_laqih"]
[ext_resource type="PackedScene" uid="uid://cwdbde0bi13fr" path="res://Scenes/TrainingProgram/parts/GameplayLoop/parts/EngineeringPanel/parts/RealityMonitor.tscn" id="6_ed7et"]
[ext_resource type="PackedScene" uid="uid://dqn2ef77ux60p" path="res://Scenes/TrainingProgram/parts/GameplayLoop/parts/EngineeringPanel/parts/PollutionMonitor.tscn" id="6_mnkd6"]
[ext_resource type="PackedScene" uid="uid://c7n7pxhkwpt0k" path="res://UI/SvgIcon/SVGIcon.tscn" id="7_n8h5w"]
[ext_resource type="LabelSettings" uid="uid://34n116bw0xn5" path="res://Fonts/small_font_label_setting.tres" id="8_1jjk5"]
[ext_resource type="PackedScene" uid="uid://b641lti6qidew" path="res://UI/EconItem/EconItem.tscn" id="8_u58ao"]
[ext_resource type="StyleBox" uid="uid://deoct5txhbuc8" path="res://Styles/OrangePanel.tres" id="9_u58ao"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yr4tm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ctfup"]
bg_color = Color(0.0562916, 0.0562916, 0.0562916, 1)
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="LabelSettings" id="LabelSettings_ki5i7"]
font = ExtResource("2_nely8")
outline_size = 2
outline_color = Color(1, 1, 1, 0.2)
shadow_size = 0
shadow_color = Color(1, 1, 1, 0.235294)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gbxtp"]
bg_color = Color(0.0562916, 0.0562916, 0.0562916, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5

[sub_resource type="LabelSettings" id="LabelSettings_yr4tm"]
font = ExtResource("3_jdo1u")
outline_color = Color(0, 0, 0, 0.615686)
shadow_size = 0
shadow_offset = Vector2(2, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5pk1a"]
bg_color = Color(1, 0.74902, 0.2, 1)
corner_radius_top_left = 5

[sub_resource type="LabelSettings" id="LabelSettings_ctfup"]
font = ExtResource("3_jdo1u")
font_size = 32
font_color = Color(0, 0, 0, 1)
outline_color = Color(0, 0, 0, 0.615686)
shadow_size = 0
shadow_offset = Vector2(2, 2)

[node name="BaseMangementComponent" type="PanelContainer"]
offset_right = 325.0
offset_bottom = 218.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_yr4tm")
script = ExtResource("1_ymcgu")

[node name="DescriptionControl" type="Control" parent="."]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="DescriptionControl"]
custom_minimum_size = Vector2(456, 0)
layout_mode = 2
offset_top = 348.0
offset_right = 325.0
offset_bottom = 398.0
size_flags_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_ctfup")

[node name="MarginContainer" type="MarginContainer" parent="DescriptionControl/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="DescriptionControl/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="DescriptionLabel" type="Label" parent="DescriptionControl/PanelContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Description goes here."
label_settings = SubResource("LabelSettings_ki5i7")
vertical_alignment = 1
autowrap_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Header" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_styles/panel = SubResource("StyleBoxFlat_gbxtp")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Header"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Header/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Header/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "SYSTEMS CONTROL"
label_settings = SubResource("LabelSettings_yr4tm")
horizontal_alignment = 2

[node name="Content" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_5pk1a")

[node name="Control" type="Control" parent="VBoxContainer/Content"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Content"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Content/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Content/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = -10

[node name="Heating" parent="VBoxContainer/Content/MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource("4_1m6fd")]
layout_mode = 2
size_flags_horizontal = 0
title = "Heating"
color = Color(1, 0.272178, 0.404585, 1)

[node name="Cooling" parent="VBoxContainer/Content/MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource("4_1m6fd")]
layout_mode = 2
size_flags_horizontal = 0
title = "Cooling"
active_level = 3
color = Color(0.491226, 0.660078, 1, 1)

[node name="Ventilation" parent="VBoxContainer/Content/MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource("4_1m6fd")]
layout_mode = 2
size_flags_horizontal = 0
title = "Ventilation"
color = Color(0, 0.70459, 0.278433, 1)

[node name="SRA" parent="VBoxContainer/Content/MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource("4_1m6fd")]
layout_mode = 2
size_flags_horizontal = 0
title = "SRA"
color = Color(0.51476, 0.344315, 1, 1)
is_disabled = true

[node name="Energy" parent="VBoxContainer/Content/MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource("4_1m6fd")]
layout_mode = 2
size_flags_horizontal = 0
title = "ENERGY"
active_level = 4
color = Color(0.864543, 0.586489, 0.281442, 1)

[node name="Logistics" parent="VBoxContainer/Content/MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource("4_1m6fd")]
layout_mode = 2
size_flags_horizontal = 0
title = "Logistics"
color = Color(0.640597, 0.660379, 0.647715, 1)
values = [1, 2, 3, 4]

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/Content/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/margin_top = 10

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/Content/MarginContainer/HBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Content/MarginContainer/HBoxContainer/MarginContainer2/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="TempMonitor" parent="VBoxContainer/Content/MarginContainer/HBoxContainer/MarginContainer2/VBoxContainer2/HBoxContainer" instance=ExtResource("5_laqih")]
layout_mode = 2
slider_val = 3

[node name="PollutionMonitor" parent="VBoxContainer/Content/MarginContainer/HBoxContainer/MarginContainer2/VBoxContainer2/HBoxContainer" instance=ExtResource("6_mnkd6")]
layout_mode = 2

[node name="RealityMonitor" parent="VBoxContainer/Content/MarginContainer/HBoxContainer/MarginContainer2/VBoxContainer2/HBoxContainer" instance=ExtResource("6_ed7et")]
layout_mode = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer/Content/MarginContainer/HBoxContainer/MarginContainer2/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Content/MarginContainer/HBoxContainer/MarginContainer2/VBoxContainer2/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 35
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Content/MarginContainer/HBoxContainer/MarginContainer2/VBoxContainer2/HBoxContainer4/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Content/MarginContainer/HBoxContainer/MarginContainer2/VBoxContainer2/HBoxContainer4/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "ENERGY AVAILABLE"
label_settings = ExtResource("8_1jjk5")

[node name="EnergyItem" parent="VBoxContainer/Content/MarginContainer/HBoxContainer/MarginContainer2/VBoxContainer2/HBoxContainer4/MarginContainer/HBoxContainer" instance=ExtResource("8_u58ao")]
layout_mode = 2
horizontal_mode = true
icon = 37
amount = 1
max_amount = 10
icon_size = Vector2(20, 20)

[node name="HBoxContainer5" type="HBoxContainer" parent="VBoxContainer/Content/MarginContainer/HBoxContainer/MarginContainer2/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Content/MarginContainer/HBoxContainer/MarginContainer2/VBoxContainer2/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Content/MarginContainer/HBoxContainer/MarginContainer2/VBoxContainer2/HBoxContainer5/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/Content/MarginContainer/HBoxContainer/MarginContainer2/VBoxContainer2/HBoxContainer5/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
size_flags_horizontal = 3
text = "SUPPORT 1 FACILITY PER WING"
label_settings = ExtResource("8_1jjk5")

[node name="Upgrade" type="Control" parent="."]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="Upgrade"]
layout_mode = 0
offset_top = -71.0
offset_right = 158.0
offset_bottom = 17.0
theme_override_styles/panel = ExtResource("9_u58ao")

[node name="VBoxContainer" type="VBoxContainer" parent="Upgrade/PanelContainer"]
layout_mode = 2

[node name="Header" type="PanelContainer" parent="Upgrade/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gbxtp")

[node name="MarginContainer" type="MarginContainer" parent="Upgrade/PanelContainer/VBoxContainer/Header"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Label" type="Label" parent="Upgrade/PanelContainer/VBoxContainer/Header/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "ALLOCATE"
label_settings = SubResource("LabelSettings_yr4tm")
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Upgrade/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Upgrade/PanelContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Upgrade/PanelContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="LessBtn" parent="Upgrade/PanelContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("7_n8h5w")]
layout_mode = 2
icon = 10
icon_color = Color(0, 0, 0, 1)
flip_h = true

[node name="HBoxContainer" type="HBoxContainer" parent="Upgrade/PanelContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="SVGIcon" parent="Upgrade/PanelContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer" instance=ExtResource("7_n8h5w")]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
icon = 44
icon_color = Color(0, 0, 0, 1)
icon_size = Vector2(25, 25)

[node name="UpgradeCountLabel" type="Label" parent="Upgrade/PanelContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "99"
label_settings = SubResource("LabelSettings_ctfup")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MoreBtn" parent="Upgrade/PanelContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("7_n8h5w")]
layout_mode = 2
icon = 10
icon_color = Color(0, 0, 0, 1)

[node name="Control" type="Control" parent="Upgrade/PanelContainer"]
layout_mode = 2

[node name="SVGIcon" parent="Upgrade/PanelContainer/Control" instance=ExtResource("7_n8h5w")]
custom_minimum_size = Vector2(10, 20)
layout_mode = 0
offset_left = 22.0
offset_top = 81.0
offset_right = 32.0
offset_bottom = 101.0
icon = 42
icon_color = Color(1, 0.74902, 0.2, 1)
icon_size = Vector2(10, 20)
